tests/fixtures/errors/e0809_default_target_not_reg.mimz
// expect: E0809
module M {
    clock clk
    wire w: bit = 0
    on rise(clk) {
        default w <- 0
    }
}
